# Boiling-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/glad/: glad.h  glad_4.3_core.h
include/glad/: glad.h
lib/glfw/: glfw3.lib
shaders/: fragment_shader.frag  vertex_shader.vert
src/: Console.cpp  Console.h  Engine.cpp  Engine.h  Entity.h  Game.cpp  Game.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  Triangle.h  Window.cpp  Window.h  World_object.h  glad.c  main.cpp
vs19/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  boiling_engine.sln  boiling_engine.vcxproj  boiling_engine.vcxproj.filters  cmake_install.cmake
